--- a/public/frontend/css/style1.css
+++ b/public/frontend/css/style1.css
@@ -28,7 +28,7 @@ nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
 img{max-width:100%;}
 /*end reset*/
 body {
-    background: url(../img/login/login.jpg)no-repeat center top;
+    background: url(../img/login/tre.jpg)no-repeat center top;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
