--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -10,7 +10,7 @@ ul, ol {margin: 0;}
 p {margin: 0;}
 
 html, body{
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto';
     font-size: 100%;
     overflow-x: hidden;
     background: url(../images/bg.jpg) no-repeat 0px 0px;
@@ -1236,7 +1236,7 @@ h4.title {
     position: relative;
     top: 1px;
     display: inline-block;
-    font-family: 'Glyphicons Halflings';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     line-height: 1;
@@ -1294,7 +1294,7 @@ h3.agileits-icons-title {
     position: relative;
     top: 1px;
     display: inline-block;
-    font-family: 'Glyphicons Halflings';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     line-height: 1;
@@ -1728,7 +1728,7 @@ select.input-sm {
     margin-bottom: 5px;
 }
 #upload{
-    font-family:'PT Sans Narrow', sans-serif;
+    font-family: 'Roboto';
     background-color:#fff;
     /*background-image:-webkit-linear-gradient(top, #373a3d, #313437);*/
     /*background-image:-moz-linear-gradient(top, #373a3d, #313437);*/
@@ -2174,11 +2174,11 @@ ul.inbox-pagination li {
 }
 .modal-header h4.modal-title {
     font-weight:300;
-    font-family:'Open Sans',sans-serif;
+    font-family: 'Roboto';
 }
 .modal-body label {
     font-weight:400;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Roboto';
 }
 .compose-mail {
     width: 100%;
